--- a/index.css
+++ b/index.css
@@ -1,5 +1,80 @@
-body{
-    font-family: 'Fira Sans', sans-serif;
-    color: crimson;
+* {
+    font-family: 'Fira Sans';
+    box-sizing: border-box;
+    border: 0;
+    padding: 0;
+}
 
+.logo img {
+    width: 50px;
+}
+
+.contenedor {
+    background-color: white;
+    opacity: 0;
+    right: 5px;
+    top: 0;
+    transition: .3s ease;
+    position: absolute;
+    z-index: -1;
+}
+
+.showContenedor {
+    opacity: 1;
+}
+
+.contenedor ul li {
+    text-align: center;
+    font-size: 1.2rem;
+    list-style-type: none;
+    padding: 50px;
+}
+.contenedor ul li a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.elementosNav {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.elementosNav img {
+    width: 40px;
+}
+
+.menu {
+    margin: 5px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+}
+
+.burguer {
+    width: 40px;
+    height: 40px;
+    background-image: url("images/more_5950665.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: right;
+    transition: .3s ease-in-out;
+
+}
+
+.showCruz {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 20px;
+    height: 20px;
+    transition: .3s ease-in-out;
+    background-image: url("images/cross-mark_8944282.png");
+    background-repeat: no-repeat;
+}
+
+.showVelo {
+    background-color: black;
+    opacity: 0.9;
 }
