--- a/styles/index.css
+++ b/styles/index.css
@@ -31,8 +31,7 @@
 }
 
 .cuerpo {
-    font-size: 1.2rem;
-    padding: 10px;
+    padding: 20px;
 }
 
 .sabermas {
@@ -69,7 +68,9 @@
 
 @media (min-width: 1024px) {
 
-
+    .texto{
+        padding: 10px;
+    }
     .logo {
         margin-left: 20px;
     }
@@ -140,5 +141,10 @@
         background-color: rgb(194, 194, 194);
         font-weight: bold;
     }
+    .imagenPresentacion{
+        padding: 20px;
+        width: 75%;
+    }
+
 
 }
