--- a/styles/headerFooter.css
+++ b/styles/headerFooter.css
@@ -6,6 +6,7 @@
 }
 
 html {
+    min-height: 100%;
     position: relative;
 }
 
@@ -13,6 +14,8 @@ body {
     margin: 0;
     padding: 0;
     background-image: url(../images/curva-azul-ombre-sobre-fondo-azul-claro.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .all {
@@ -23,11 +26,11 @@ body {
     filter: brightness(1.1);
     mix-blend-mode: multiply;
     width: 50px;
-
-
+    z-index: -1;
 }
 
 .logo {
+
     padding: 5px;
 }
 
@@ -35,15 +38,17 @@ body {
     width: 250px;
     border-radius: 7px;
     background-color: white;
+    visibility: hidden;
     opacity: 0;
     right: 5px;
     top: 0;
-    transition: .3s ease;
+    transition: .3s ease-out;
     position: absolute;
-    z-index: -1;
+    z-index: 1;
 }
 
 .showContenedor {
+    visibility: visible;
     opacity: 1;
 }
 
@@ -83,6 +88,7 @@ body {
 }
 
 .burguer {
+    cursor: pointer;
     width: 40px;
     height: 40px;
     background-image: url("../images/more_5950665.png");
@@ -91,10 +97,11 @@ body {
     display: flex;
     justify-content: right;
     transition: .3s ease-in-out;
-
+    z-index: 2;
 }
 
 .showCruz {
+    z-index: 2;
     position: absolute;
     top: 10px;
     right: 10px;
@@ -153,7 +160,7 @@ footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 40px;
+    height: 20px;
     color: white;
 }
 
@@ -169,13 +176,13 @@ footer {
     }
 }
 
+
 @media (min-width: 1024px) {
     .all {
         width: calc(60% + 20rem);
-    }
-}
+        border-radius: 50px;
 
-@media (min-width: 1024px) {
+    }
     .cuerpo {
         font-size: 1.3rem;
     }
@@ -197,7 +204,6 @@ footer {
         display: flex;
         position: relative;
         justify-content: center;
-        z-index: -1;
     }
 
     .contenedor ul {
@@ -215,7 +221,7 @@ footer {
     }
 
     .contenedor {
-
+        visibility: visible;
         background-color: initial;
         border-radius: initial;
         opacity: 1;
@@ -233,12 +239,12 @@ footer {
 
         margin-top: 10px;
         margin-right: 100px;
-        font-size: 1.4rem;
+        font-size: 1.6rem;
         color: black;
         padding: 10px;
         cursor: pointer;
         transition: 0.3s ease;
-        width: 150px;
+        width: 200px;
     }
 
     .contenedor ul li:hover {
