--- a/styles/index.css
+++ b/styles/index.css
@@ -31,7 +31,12 @@
 }
 
 .cuerpo {
-    padding: 20px;
+    width: 80%;
+}
+
+main {
+    display: grid;
+    justify-items: center;
 }
 
 .sabermas {
@@ -68,80 +73,16 @@
 
 @media (min-width: 1024px) {
 
-    .texto{
+    .texto {
         padding: 10px;
-    }
-    .logo {
-        margin-left: 20px;
-    }
-
-    .logo img {
-        width: 60px;
-    }
-
-    .burguer {
-        display: none;
-    }
-
-    nav.elementosNav {
-        width: 100%;
-        display: flex;
-        position: relative;
-        justify-content: center;
-        z-index: -1;
-    }
-
-    .contenedor ul {
-        z-index: 2;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-    }
-
-    .menu {
-        margin: 0 0 20px 0;
-        display: flex;
-        align-items: center;
-    }
-
-    .contenedor {
-
-        background-color: initial;
-        border-radius: initial;
-        opacity: 1;
-        display: flex;
-        justify-content: center;
-        position: initial;
-    }
-
-    .contenedorPrincipal {
-        width: 100%;
-        align-items: center;
-    }
-
-    .contenedor ul li {
-
-        margin-top: 10px;
-        margin-right: 100px;
-        font-size: 1.4rem;
-        color: black;
-        padding: 10px;
-        cursor: pointer;
-        transition: 0.3s ease;
-        width: 150px;
-    }
-
-    .contenedor ul li:hover {
-        transform: scale(1.1);
-        ;
     }
 
     .contenedor ul li:nth-child(1) {
         background-color: rgb(194, 194, 194);
         font-weight: bold;
     }
-    .imagenPresentacion{
+
+    .imagenPresentacion {
         padding: 20px;
         width: 75%;
     }
