--- a/styles/stylesD.css
+++ b/styles/stylesD.css
@@ -8,7 +8,7 @@ main {
 .textoIni {
     display: grid;
     justify-content: center;
-    font-size: calc(1.5rem + 10px);
+    font-size: 1.2rem;
     color: lightcoral;
 }
 span{
@@ -95,7 +95,11 @@ form {
     color: rgba(28, 131, 165, 0.661);
     font-weight: bold;
 }
-
+@media (min-width: 425px){
+    .textoIni{
+        font-size: 1.5rem;
+    }
+}
 @media (min-width: 1024px) {
     .contenedor ul li:nth-child(3) {
         background-color: rgb(194, 194, 194);
